// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pivot-data-set utils test should return flatten dimension values if exist total group 1`] = `
Array [
  Array [
    "四川省",
    "成[&]都[&]市",
    "办公用品",
    "纸张",
  ],
]
`;

exports[`pivot-data-set utils test should return flatten dimension values if exist total group 2`] = `
Array [
  Array [
    "四川省",
    "成[&]都[&]市",
    "家具",
    "桌子",
  ],
  Array [
    "四川省",
    "成[&]都[&]市",
    "家具",
    "沙发",
  ],
  Array [
    "四川省",
    "成[&]都[&]市",
    "办公用品",
    "笔",
  ],
  Array [
    "四川省",
    "成[&]都[&]市",
    "办公用品",
    "纸张",
  ],
]
`;

exports[`pivot-data-set utils test should return flatten dimension values if exist total group 3`] = `
Array [
  Array [
    "四川省",
    "成[&]都[&]市",
    "办公用品",
    "笔",
  ],
  Array [
    "四川省",
    "成[&]都[&]市",
    "办公用品",
    "纸张",
  ],
  Array [
    "四川省",
    "绵阳市",
    "办公用品",
    "笔",
  ],
  Array [
    "四川省",
    "绵阳市",
    "办公用品",
    "纸张",
  ],
  Array [
    "浙江省",
    "杭州市",
    "办公用品",
    "笔",
  ],
  Array [
    "浙江省",
    "杭州市",
    "办公用品",
    "纸张",
  ],
  Array [
    "浙江省",
    "舟山市",
    "办公用品",
    "笔",
  ],
  Array [
    "浙江省",
    "舟山市",
    "办公用品",
    "纸张",
  ],
]
`;

exports[`pivot-data-set utils test should return flatten dimension values if exist total group 4`] = `
Array [
  Array [
    "四川省",
    "成[&]都[&]市",
    "办公用品",
    "笔",
  ],
  Array [
    "四川省",
    "成[&]都[&]市",
    "办公用品",
    "纸张",
  ],
  Array [
    "四川省",
    "绵阳市",
    "办公用品",
    "笔",
  ],
  Array [
    "四川省",
    "绵阳市",
    "办公用品",
    "纸张",
  ],
]
`;
